Fix gap

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -14,7 +14,7 @@
   .cards {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
     width: 100%;
     padding: 20px;
   }
